[tool.poetry]
name = "oz-merkle-tree"
version = "0.1.0"
description = "A Python library to generate merkle trees and merkle proofs."
authors = ["madlabman <10616301+madlabman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "oz_merkle_tree", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
eth-abi = "^5.1.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"
ruff = "^0.3.7"
pytest = "^8.1.1"
pyright = "^1.1.359"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 100
target_version = ["py311"]
