[package]
name = "near-staker"
description = "The TruStake staker"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.2.1"
near-contract-standards = "5.2.1"
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
near-workspaces = { version = "0.10.1", features = ["unstable"] }
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }


