[package]
name    = "liquidity_layer"
version = "0.0.1"
authors = ["Mihai Eremia <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[dependencies.multiversx-sc]
version = "0.59.0"
features = ["barnard"]

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-math]
path = "../common/math"

[dependencies.common-rates]
path = "../common/rates"

[dependencies.common-constants]
path = "../common/constants"

[dependencies.common-events]
path = "../common/events"

[dependencies.common-errors]
path = "../common/errors"

[dev-dependencies.multiversx-sc-scenario]
version = "0.59.0"

