[package]
name = "liquid-staking"
version = "0.0.0"
authors = ["Mihai Eremia <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.itertools]
version = "0.14.0"
default-features = false

[dependencies.multiversx-sc]
version = "0.61.0"
features = ["barnard"]

[dependencies.multiversx-sc-modules]
version = "0.61.0"

[dependencies.accumulator]
git = "https://github.com/XOXNO/rs-accumulator"

[dev-dependencies.delegation-mock]
path = "../delegation-mock"

[dev-dependencies.delegation-manager-mock]
path = "../delegation-manager-mock"

[dev-dependencies.multiversx-sc-scenario]
version = "0.61.0"
features = ["wasmer-experimental"]

[dev-dependencies]
rand = "0.9.1"
rand_chacha            = "0.9.0"