[package]
name    = "vote-sc"
version = "0.0.0"
authors = ["Mihai Eremia <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.itertools]
version          = "0.14.0"
default-features = false

[dependencies.multiversx-sc]
version = "0.61.0"

[dependencies.multiversx-sc-modules]
version = "0.61.0"

[dev-dependencies.multiversx-sc-scenario]
version  = "0.61.0"

[dev-dependencies]
rand        = "0.9.1"
rand_chacha = "0.9.0"
