[package]
edition = "2021"
name = "integration-tests"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-manifest-types.workspace = true
strata-asm-params = { workspace = true, features = ["arbitrary"] }
strata-asm-proto-administration.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-checkpoint.workspace = true
strata-asm-proto-checkpoint-v0.workspace = true
strata-asm-txs-admin = { workspace = true, features = ["test-utils"] }
strata-asm-txs-bridge-v1 = { workspace = true, features = ["test-utils"] }
strata-asm-worker.workspace = true
strata-bridge-types.workspace = true
strata-btc-types.workspace = true
strata-checkpoint-types-ssz.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-crypto.workspace = true
strata-db-types.workspace = true
strata-identifiers.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-l1-txfmt.workspace = true
strata-merkle.workspace = true
strata-ol-chain-types-new.workspace = true
strata-ol-stf.workspace = true
strata-params.workspace = true
strata-predicate.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-tasks.workspace = true
strata-test-utils.workspace = true
strata-test-utils-btcio.workspace = true
strata-test-utils-l2.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
bitcoin-bosd.workspace = true
bitcoind-async-client.workspace = true
borsh.workspace = true
corepc-node.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ssz.workspace = true
tokio.workspace = true

[dev-dependencies]

[lib]
name = "integration_tests"
path = "lib.rs"

[[test]]
name = "asm_core"
path = "asm/core.rs"

[[test]]
name = "asm_admin"
path = "asm/admin.rs"

[[test]]
name = "asm_bridge"
path = "asm/bridge.rs"

[[test]]
name = "asm_admin_to_checkpoint"
path = "asm/admin_to_checkpoint.rs"

[[test]]
name = "asm_checkpoint"
path = "asm/checkpoint.rs"

[[test]]
name = "asm_bridge_to_checkpoint"
path = "asm/bridge_to_checkpoint.rs"
