[project]
name = "functional-tests"
version = "0.1.0"
description = "functional tests env for strata bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flexitest",
  "bitcoinlib>=0.7.5,<0.8",
  "websockets~=15.0",
  "toml",
  "pathlib",
]

[dependency-groups]
dev = ["ruff==0.14.5", "ty>=0.0.12"]


[tool.uv]
[tool.uv.sources]
flexitest = { git = "https://codeberg.org/treyd/flexitest.git" }


[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # related to star imports
  "F405",
  "F403",
  # if block stuff
  "SIM102",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ty.rules]
unresolved-attribute = "ignore"
