[package]
name = "paymaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = { version = "0.6.4", features = ["full"]}
eyre = { version = "0.6", features = ["track-caller"] }
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
color-eyre = "0.6.3"

[features]
default = []
dev = []
