[package]
name = "stake-deposit-interceptor-api"
version.workspace = true
edition = "2021"

[[bin]]
name = "stake-deposit-interceptor-api"
path = "src/bin/main.rs"

[dependencies]
axum = "0.7.9"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive", "env"] }
futures = "0.3.31"
jito-bytemuck.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-stake-interface.workspace = true
spl-stake-pool.workspace = true
spl-token-interface.workspace = true
stake-deposit-interceptor = { path = "../stake_deposit_interceptor", features = ["no-entrypoint"] }
thiserror = "1.0.37"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
