[package]
name = "stake-deposit-interceptor-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "stake-deposit-interceptor-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
jito-bytemuck.workspace = true
log.workspace = true
serde_json.workspace = true
solana-clock.workspace = true
solana-commitment-config.workspace = true
solana-derivation-path.workspace = true
solana-keypair.workspace = true
solana-program.workspace = true
solana-pubkey.workspace = true
solana-remote-wallet.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-signature.workspace = true
solana-signer.workspace = true
solana-stake-interface.workspace = true
solana-system-interface.workspace = true
solana-transaction.workspace = true
spl-associated-token-account-interface.workspace = true
spl-stake-pool.workspace = true
spl-token.workspace = true
spl-token-interface.workspace = true
stake-deposit-interceptor.workspace = true
stake-deposit-interceptor-client.workspace = true
tokio.workspace = true
uriparse.workspace = true
