[package]
name = "stake-deposit-interceptor"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake_deposit_interceptor_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
jito-bytemuck.workspace = true
jito-whitelist-management-core.workspace = true
num-derive = "0.4.2"
num-traits = "0.2.19"
shank.workspace = true
solana-account-info.workspace = true
solana-clock.workspace = true
solana-program.workspace = true
solana-program-error.workspace = true
solana-program-log.workspace = true
solana-pubkey.workspace = true
solana-security-txt = "1.1.1"
solana-stake-interface.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account-interface.workspace = true
spl-pod = { version = "0.4.0", features = ["borsh"] }
spl-stake-pool.workspace = true
spl-token-2022-interface.workspace = true
spl-token-interface.workspace = true
thiserror.workspace = true

[dev-dependencies]
jito-whitelist-management-client.workspace = true
solana-account.workspace = true
solana-commitment-config.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-native-token.workspace = true
solana-program-test.workspace = true
solana-pubkey.workspace = true
solana-transaction.workspace = true
solana-vote-interface.workspace = true
stake-deposit-interceptor-client.workspace = true
tokio.workspace = true
