[package]
name = "kamino_vault"
version = "2.0.1"
description = "Kamino lending vault Solana program"
edition = "2021"
license = "BUSL-1.1"
publish = false


[lib]
crate-type = ["cdylib", "lib"]
name = "kamino_vault"

[features]
default = ["mainnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
serde = ["dep:serde", "fixed/serde-str"]
mainnet = []
staging = []
staging-to-staging = ["kamino_lending/staging"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "kamino_lending/idl-build"]
test-sbf = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
solana-security-txt = "1.1.1"

# Override anchor to use borsh with the const-generics feature
# Allows to borsh serialize arrays of any length
borsh.workspace = true
bytemuck.workspace = true
rust_decimal = { version = "1.26.0", features = ["maths"] }
derivative = "2.2.0"
num_enum = "0.7.0"
strum = { git = "https://github.com/Kamino-Finance/strum", features = ["derive"], branch = "checked_arithmetics" }

static_assertions = "1.1.0"
derive_builder = "0.13.0"
fixed = { version = "1.23.1" }
fixed-macro = "1.1"
uint = "0.9.5"
arrform = "0.1.1"
kamino_lending = { git = "https://github.com/Kamino-Finance/klend.git", features = [
    "no-entrypoint",
], tag = "release/v1.12.6" }

# Only required when serializing to market config to JSON and in tests
serde = { workspace = true, optional = true }

